# phylogenetic_cards

./: .gitignore  README.md  pyproject.toml
data/: ancestors_tale.yaml
src/phylogenetic_cards/: artwork.py  card_mapping.py  cli.py  divergence.py  models.py  renderer.py  researcher.py  tree.py  tree_diagram.py
